Kubernetes/task2/ingress/dash_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dash-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/ssl-services: kubernetes-dashboard
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  rules:
  - host: dash.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
