Kubernetes/task2/ingress/guest_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  rules:
  - host: guestbook.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
