Kubernetes/task2/ingress/kibana_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:

spec:
  rules:
  - host: kibana.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-kibana
          servicePort: 5601
